test/expected/simple-fs-read.txt
/scripts/simple-fs-read.js:11
  throw new Error('trace');
  ^

Error: trace
    at callback (/scripts/simple-fs-read.js:11:9)
    at FSReqWrap.readFileAfterClose [as oncomplete] (fs.js:404:3)
    at ReadFileContext.close (fs.js:317:11)
    at FSReqWrap.readFileAfterRead [as oncomplete] (fs.js:373:15)
    at ReadFileContext.read (fs.js:301:11)
    at FSReqWrap.readFileAfterStat [as oncomplete] (fs.js:357:11)
    at FSReqWrap.readFileAfterOpen [as oncomplete] (fs.js:333:11)
    at Object.fs.readFile (fs.js:262:11)
    at Object.<anonymous> (/scripts/simple-fs-read.js:10:4)
    at Module._compile (module.js:413:34)
    at Object.Module._extensions..js (module.js:422:10)
    at Module.load (module.js:357:32)
    at Function.Module._load (module.js:314:12)
    at Function.Module.runMain (module.js:447:10)
    at startup (node.js:141:18)
    at node.js:933:3
